[build] update to .NET 10 Preview 6 (#1227)
Update to:

* .NET SDK 9.0.303
* .NET SDK 10.0.100-preview.6.25358.103

I also removed a couple values that were unused that would cause
confusion: `dotnetWorkloadSource` and `dotnetNextApiLevel`.

Other changes:

    Xamarin.Build.Download.csproj : error NU1015: The following PackageReference item(s) do not have a version specified: Microsoft.Build.Framework, Microsoft.Build.Utilities.Core

* Update `util/Directory.Build.props` to fix this.

--- a/util/Directory.Build.props
+++ b/util/Directory.Build.props
@@ -3,5 +3,7 @@
   which is tuned for building bindings packages. -->
   <PropertyGroup>
     <_DefaultNetTargetFramework>net9.0</_DefaultNetTargetFramework>
+    <!-- Duplicate of root Directory.Build.props -->
+    <MSBuildPackageReferenceVersion Condition=" '$(MSBuildPackageReferenceVersion)' == '' ">17.13.9</MSBuildPackageReferenceVersion>
   </PropertyGroup>
 </Project>
